gccida/c0/maybe_eliminate_biv_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9082:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+78h] [rbp-58h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9082:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+78h] [rbp-58h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9083:1: error: use of undeclared identifier 'induction_1'
induction_1 *va; // [rsp+78h] [rbp-58h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9083:14: error: use of undeclared identifier 'va'
induction_1 *va; // [rsp+78h] [rbp-58h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9084:1: error: use of undeclared identifier 'induction_1'
induction_1 *vb; // [rsp+78h] [rbp-58h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9084:14: error: use of undeclared identifier 'vb'
induction_1 *vb; // [rsp+78h] [rbp-58h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9085:1: error: use of undeclared identifier 'induction_1'
induction_1 *vc; // [rsp+78h] [rbp-58h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9085:14: error: use of undeclared identifier 'vc'
induction_1 *vc; // [rsp+78h] [rbp-58h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9086:1: error: use of undeclared identifier 'induction_1'
induction_1 *vd; // [rsp+78h] [rbp-58h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9086:14: error: use of undeclared identifier 'vd'
induction_1 *vd; // [rsp+78h] [rbp-58h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9087:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+84h] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9102:7: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; ; v = v->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9102:24: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; ; v = v->next_iv ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9102:28: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; ; v = v->next_iv ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9104:7: error: use of undeclared identifier 'v'
if ( !v ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9106:6: error: use of undeclared identifier 'v'
if ( v->giv_type == DEST_REG && ( rtx)x->fld[0].rtwint == v->dest_reg ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9106:59: error: use of undeclared identifier 'v'
if ( v->giv_type == DEST_REG && ( rtx)x->fld[0].rtwint == v->dest_reg ) 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9116:7: error: use of undeclared identifier 'vd'
for ( vd = bl_0->giv; ; vd = vd->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/loop.c:9116:25: error: use of undeclared identifier 'vd'
for ( vd = bl_0->giv; ; vd = vd->next_iv ) 
                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/maybe_eliminate_biv_1/src/obj/loop.o] Error 1
